--- a/_posts/2018-01-01-test-post.md
+++ b/_posts/2018-01-01-test-post.md
@@ -1,12 +1,10 @@
 ---
 layout: post
-title:  "Jekyll true minimal theme"
+title:  "test post"
 date:   2018-01-01 23:22:40 +0300
 ---
 
-True minimal theme is extremely lightweight and ascetic jekyll theme.
-
-This theme has only one css file, which is used for source code highlighting. 
+test post
 
 
 # Heading 1
@@ -26,7 +24,7 @@ Source code are highlighted:
 #!/usr/bin/perl
 
 sub print_hello {
-    print "Hello, Jekyll!\n";
+    print "Hello, World!\n";
 }
 
 print_hello;
