--- a/_posts/2018-01-01-test-post2.md
+++ b/_posts/2018-01-01-test-post2.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "test post title"
+title:  "test post title2"
 date:   2018-01-01 23:22:40 +0300
 ---
 
-test post description
+test post description2
 
 
 # Heading 1
