--- a/_posts/2023-12-30-tree.md
+++ b/_posts/2023-12-30-tree.md
@@ -244,7 +244,8 @@ Optimal Binary Search Tree in principal is a sorted array. It is fast at **eleme
 ### Tree Creation Algorithm
 ##### with successful search only
 Consider a tree whose general structure like follow:
-```mermaid
+
+```mermaid!
 graph TB;
     a1-->a2
 	a1-->a3
@@ -265,7 +266,8 @@ When a $k$ is solved for each pair of $i, j$, the $k$ is the root value for the 
 
 ##### with successful & unsuccessful search
 now consider also unsuccessful search like following:
-```mermaid
+
+```mermaid!
 graph TB;
     a1-->a2
 	a1-->a3
