--- a/_posts/2023-12-30-tree.md
+++ b/_posts/2023-12-30-tree.md
@@ -107,15 +107,7 @@ Binary codes are sequence of binary numbers $0, 1$ that encode human understanda
 
 For example, for the binary codes tree below, binary code for character $\mathbf{a}$ is $0011$. As a result, a list of characters can be represented by a sequence of their **prefix-free** binary codes. By prefix-free it means each character's binary code is a path to leaf, no internal node in the tree, so there's no conflict in prefixes of all binary codes.
 
-
-										______0______
-									   /             \
-									__0__           __1__
-								   /     \         /     \
-								  0       1       0       1
-								 / \     / \     / \     / \
-								0   1   0   1   0   1   0   1
-										   (a)
+![huffman](/assets/images/huffman.png)
 
 
 ### Optimization Objective
@@ -144,15 +136,7 @@ When $n\geq3$, we need to prove Huffman Codes is correct when $n=k+1$ if Huffman
 
 According to our assumption, when $n=k$, Huffman Codes tree $B(S_{12, 3,...,k}, P)$ is an optimal binary codes tree (that minimizes average binary code length). So we only need to prove: based on $B(S_{12, 3,...,k}, P)$ with $s_{12}$ is the merge of two lowest frequency character $s_1$, $s_2$, when $s_{12}$ is split into two child nodes $s_1$ and $s_2$, thus $n=k+1$, the binary codes tree is still optimal and it's still Huffman Codes.
 
-								______0______
-							   /             \
-							  0             _..._
-									       /     \
-								          0       1 (s_12)
-											     / \
-											    0   1
-											 (s_1)  (s_2)
-
+![huffman2](/assets/images/huffman2.png)
 
 To prove $B(S_{1, 2, 3,...,k}, P)$ is Huffman Codes, since $B(S_{12, 3,...,k}, P)$ is optimal Huffman Codes, we only need to prove $s_1$, $s_2$ are at the deepest of the tree. Assume they are not, then there are $s_i$, $s_j$ that are deeper and have lower frequencies. This violates the assumption $s_1$, $s_2$ are the ones with lowest frequency. Thus $B(S_{1, 2, 3,...,k}, P)$ is Huffman Codes.
 
@@ -244,11 +228,7 @@ Optimal Binary Search Tree in principal is a sorted array. It is fast at **eleme
 ##### with successful search only
 Consider a tree whose general structure like follow:
 
-```mermaid!
-graph TB;
-    a1-->a2
-	a1-->a3
-```
+![obst1](/assets/images/obst1.png)
 
 Let a series of set element be $a_1, a_2, ..., a_n$, their frequencies be $f_1, f_2, ..., f_n$, and 2 2-D arrays be $A$, $F$ where $A_{i, j}$, $F_{i, j}$ is the respectively the structure and minimum total frequencies for a Optimal Binary Tree consisting of elements $a_i, a_{i+1}, ..., a_j$ ($i<=j$). 
 
@@ -266,15 +246,8 @@ When a $k$ is solved for each pair of $i, j$, the $k$ is the root value for the 
 ##### with successful & unsuccessful search
 now consider also unsuccessful search like following:
 
-```mermaid!
-graph TB;
-    a1-->a2
-	a1-->a3
-	a2-->node1[null]
-	a2-->node2[null]
-	a3-->node3[null]
-	a3-->node4[null]
-```
+![obst1](/assets/images/obst2.png)
+
 Null nodes are unsuccessful searches. For an OBST with N internal nodes (for successful searches), there are N+1 null nodes (for unsuccessful searches). The rules to divide the tree construction problem into subproblems that we noticed remain the same. That is:
 
 for each tree $A_{i, j}$, and its cost $F_{i, j}$, we know ($F_{x, x-1}=0$) 
