--- a/_posts/2023-12-30-union.md
+++ b/_posts/2023-12-30-union.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Union"
 date:   2023-12-30 21:27:00 -0800
-brief: ''
+brief: 'a disjoint set'
 ---
 
 Union-find, or disjoint-set, is a data structure that supports fast categorization/grouping (the 'union') and group id lookup for a member (the 'find'). 
@@ -114,91 +114,4 @@ class UnionFind:
 	@property
 	def n_of_union(self):
 		return self._n_of_union
-```
-
-# use
-```python
-def C3W2_2():
-	"""Input nodes of 24 bits. Edge cost is Hamming Distance"""
-	"""largest value of k such that there is a k-clustering with spacing at least 3"""
-	# input
-	i = -1
-	with open('data\\clustering_big.txt') as file:
-		nodes = []
-		for line in file:
-			if i == -1:
-				i += 1
-				continue
-			bit = int(''.join(line.split()), 2)  # converted binary to decimal
-			nodes.append(bit)
-	nodes = set(nodes)  # this equals union nodes with distance = 0 (we only care about distinced nodes in this problem)
-	mask1 = [1 << i for i in range(24)]  # 1-bit mask (distance = 1)
-	_tmp = [i+1 for i in mask1[1:]]
-	mask1 = set(mask1)
-	mask2 = {x << i for i in range(24) for x in _tmp if (x << i) <= int('1'*24, 2)}  # 2-bit mask (distance = 2)
-	# clustering
-	union = UF.UnionFind(nodes)
-	for node in nodes:
-		# union this node with other nodes where distance = 1
-		for m1 in mask1:
-			if (node ^ m1) in nodes and not union.inSameUnion(node, node ^ m1):
-				union.union(node, node ^ m1)
-		# union this node with other nodes where distance = 2
-		for m2 in mask2:
-			if (node ^ m2) in nodes and not union.inSameUnion(node, node ^ m2):
-				union.union(node, node ^ m2)
-	# after distance=1 nodes and distance=2 nodes are unioned. Current K is the largest with spacing at least 3
-	# if continue union, shortest distance = 3 nodes will be unioned, and K will decrease.
-	print(f'current largest K with spacing at least 3 is {union.n_of_union}')
-```
-
-```python
-def MST_Kruskal(graph):
-	"""
-	compute MST (minimum spanning tree)
-	Kruskal's Algorithm
-	high-level description: iteration through edges, find minimal edges in each iteration and add it to MST until MST is completed
-	remmeber to check cycles in each iteration to maintain MST property (use union-find to achieve O(1) cycle check)
-	Graph Structure: class of graph
-	Time Complexity = O(m*log(n))
-	"""
-	union = UF.UnionFind.__fromGraph(graph.vertexes)
-	edges = qsort(graph.edges, 0, len(qsort.edges)-1, pivot='random')
-	V = set(graph.vertexes)
-	X = set()
-	MST = set()
-	total_cost = 0
-	while X != V:
-		edge = edges.pop(0)
-		cost = edge[0]
-		point1 = edge[1]
-		point2 == edge[2]
-		if not union.inSameUnion(point1, point2):
-			X.add(point1)
-			X.add(point2)
-			MST.add(edge)
-			total_cost += cost
-			union.union(point1, point2)
-	return MST, total_cost
-```
-
-```python
-def MaxSpaceClustering(graph, K):
-	"""
-	max-spacing k-clustering: find max space between two clusters in a K-cluster graph
-	implementation is similar to Kruskal's MST algo
-	distance/spacing function can be customized. assume edge cost is used
-	"""
-	union = UF.UnionFind._initfromGraph(graph)
-	edges = qsort(graph.edges, 0, len(graph.edges)-1, pivot='random')
-	while union.n_of_union > K:
-		edge = edges.pop(0)
-		cost, point1, point2 = edge[0], edge[1], edge[2]
-		if not union.inSameUnion(point1, point2):
-			union.union(point1, point2)
-	while True:  # find max_space
-		edge = edges.pop(0)
-		cost, point1, point2 = edge[0], edge[1], edge[2]
-		if not union.inSameUnion(point1, point2):
-			return edge
 ```
