--- a/_posts/2024-01-29-string.md
+++ b/_posts/2024-01-29-string.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "string"
+title:  "String"
 date:   2024-01-29 02:00:00 -0800
 brief: 'string pattern matching and so on'
 ---
